--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_community">community</string>
     <string name="title_dialogs">dialogs</string>
     <string name="title_profile">profile</string>
+    <string name="loading">Loading...</string>
+    <string name="button_ok">Ok</string>
+    <string name="press_once_again_to_exit">press once again to exit</string>
 </resources>
