--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,10 @@
     <string name="btn_forgot_password">Восстановить пароль</string>
     <string name="btn_link_to_login">Уже зарегистрированы?</string>
     <string name="action_sign_in_short">Зарегистрироваться</string>
-    <string name="hint_email">email</string>
+    <string name="hint_email">Email</string>
     <string name="login">имя пользователя</string>
     <string name="lbl_forgot_password">Забыли пароль?</string>
-    <string name="hint_password">пароль</string>
+    <string name="hint_password">Пароль</string>
     <string name="forgot_password_msg">Введите адрес электронной почты, на которую зарегистрирован ваш аккаунт</string>
     <string name="btn_reset_password">Сбросить пароль</string>
     <string name="btn_back"><![CDATA[<< Back]]></string>
@@ -20,7 +20,7 @@
     <string name="btn_link_to_register">Все еще не с нами? Присоединяйтесь!</string>
     <string name="auth_failed">Ошибка авторизации, неверный логин/пароль или вы еще не зарегистрированы</string>
     <string name="btn_login">Войти</string>
-    <string name="email_err">Введите email, который вы указали при регистрации</string>
+    <string name="email_err">Некорректный email</string>
     <string name="email_signup_err">Введите ваш email</string>
     <string name="pass_signup_err">Придумайте пароль</string>
     <string name="pass_reset_sucss">Мы отправили инструкции на вашу почту</string>
