--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="btn_link_to_register">Все еще не с нами? Присоединяйтесь!</string>
     <string name="auth_failed">Ошибка авторизации, неверный логин/пароль или вы еще не зарегистрированы</string>
     <string name="btn_login">Войти</string>
+    <string name="txt_login">Вход</string>
     <string name="email_err">Некорректный email</string>
     <string name="email_signup_err">Введите ваш email</string>
     <string name="pass_signup_err">Придумайте пароль</string>
