--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,12 @@
     <string name="signup_err">Ошибка регистрации</string>
     <string name="no_interent_connection_err">Проверьте интернет соединение</string>
     <string name="login_empty">Придумайте логин!</string>
+    <string name="empty_field_err">Пожалуйста, запомлните это поле!</string>
+    <string name="first_name">Ваше имя</string>
+    <string name="second_name">Ваша фамилия</string>
+    <string name="about">О себе&#8230;</string>
+    <string name="about_txt">Расскажите о себе</string>
+    <string name="date_of_birth">Ваш день рождения: </string>
+    <string name="next_step">Далее</string>
+    <string name="txt_signup">Регистрация</string>
 </resources>
