--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="empty_field_err">Пожалуйста, запомлните это поле!</string>
     <string name="first_name">Ваше имя</string>
     <string name="second_name">Ваша фамилия</string>
-    <string name="about">О себе&#8230;</string>
+    <string name="about">О себе</string>
     <string name="about_txt">Расскажите о себе</string>
     <string name="date_of_birth">Ваш день рождения: </string>
     <string name="next_step">Далее</string>
