--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="btn_signup">Зарегистрироваться</string>
     <string name="txt_login">Вход</string>
     <string name="email_err">Некорректный email</string>
-    <string name="email_signup_err">Введите ваш email</string>
+    <string name="email_signup_err">Введите ваш действующий email</string>
     <string name="pass_signup_err">Придумайте пароль</string>
     <string name="pass_reset_sucss">Мы отправили инструкции на вашу почту</string>
     <string name="pass_reset_fail">Ошибка смены пароля, проверьте email</string>
